[project]
name = "healthmon"
description = "Automatic docker health check monitoring and reporting"
dynamic = ["version"]
dependencies = [
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
healthmon = ["*.sh"]

[tool.setuptools.dynamic]
version = {attr = "healthmon.__version__"}

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "types-setuptools",
]
